using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeilling = "isOnCeilling";
    internal static string attack = "attack";
    internal static string moveAllowed = "moveAllowed";
    internal static string isAlive = "isAlive";
    internal static string seeTarget = "seeTarget";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
}

